:bug: revert Radio no wrapping style (#22229)
close #22224

--- a/components/radio/style/index.less
+++ b/components/radio/style/index.less
@@ -13,7 +13,6 @@
 
   display: inline-block;
   line-height: unset;
-  white-space: nowrap;
 
   &-rtl {
     direction: rtl;
